<resources>
    <string name="app_name">Realm</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="authenticating">Authenticating ...</string>
    <string name="authenticated">Authenticated ✔</string>
    <string name="authentication_error">Authentication error !!!</string>
    <string name="internet_connection_error">Internet connection error !!!</string>
    <string name="last_sync_time">Last sync time :</string>
    <string name="syncd_exception_codes">Synchronized Exception codes</string>
    <string name="fetching_global_data">Fetching global data</string>
    <string name="progress">progress :</string>
    <string name="syncd_global_data">Synchronized Global data</string>
    <string name="syncd_local_record">Synchronized local record</string>
    <string name="today">Today</string>
    <string name="status_prompt">Status :</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="synchronization_complete">Synchronization complete</string>
    <string name="synchronized_local">Synchronized local</string>
    <string name="pending_data">,pending data :</string>
    <string name="unable_to_do_online_sync">Unable to do online authentication...</string>
    <string name="unable_to_do_back_sync">Unable to do background synchronization</string>
    <string name="auto_back_synchronization">Auto-Back Sync</string>
    <string name="global_data_sync">Global data Sync</string>
    <string name="overall_sync_progress">Overall sync Progress</string>
    <string name="backup_title">Backup</string>
    <string name="email_backup">Email backup</string>
    <string name="sftp_backup">SFTP backup</string>
    <string name="sd_card_backup">SD Card backup</string>
    <string name="overal_backup_progress">Overall backup Progress</string>
    <string name="initialize_backup">Initialize backup</string>
    <string name="last_backup_time">Last backup time :</string>
    <string name="backup">Backup</string>
    <string name="info">Info</string>
    <string name="home">Home</string>
    <string name="staging_log_files">Staging Log files</string>
    <string name="staging_current_database">Staging current database</string>
    <string name="backup_location_ok">Backup location OK</string>
    <string name="log_backup_ok">Log backup files OK</string>
    <string name="log_file_ok">Log file OK</string>
    <string name="db_backup_ok">Databases backup directory OK</string>
    <string name="db_ok">Database OK</string>
    <string name="image_files_ok">Image files OK</string>
    <string name="verifying_files_to_backup">Verifying files to archive</string>
    <string name="creating_archive">Creating archive</string>
    <string name="employee_data_files_ok">Employee data files location verrified</string>
    <string name="archive_creation_complete">Archive creation complete</string>
    <string name="initializing_backup">Initializing backup</string>
    <string name="email_backup_begun">Email backup begun</string>
    <string name="sftp_backup_begun">SFTP backup begun</string>
    <string name="sd_card_backup_begun">SD card backup begun</string>
    <string name="sd_card_not_available">SD Card not available</string>
    <string name="sd_card_backup_failed">SD Card backup failed</string>
    <string name="sd_card_backup_terminated">SD card backup terminated</string>
    <string name="sd_card_backup_complete">SD card backup Complete</string>
    <string name="backup_complete">Backup Complete</string>
    <string name="missing_file">False/missing file detected :</string>
    <string name="connected_to_sftp_server">Connected to SFTP server</string>
    <string name="connection_failed">Connection failed</string>
    <string name="attempting_sftp_reconnection">Attempting SFTP reconnection</string>
    <string name="uploading_backup">Uploading backup</string>
    <string name="sftp_upload_failed">SFTP file transfer failed :</string>
    <string name="sftp_upload_successfull">SFTP upload successful</string>
    <string name="synchronization_status">Synchronization status :</string>
    <string name="recursive">Recursive</string>
    <string name="synchronize">Synchronize</string>
    <string name="previous">Previous</string>
    <string name="next">Next </string>
    <string name="dismiss">Dismiss</string>
    <string name="prepairing_files_to_archive">Prepairing files to archive</string>
    <string name="archiving">Archiving :</string>
    <string name="unavailable_field">Unavailable !</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_performance_annalizer">Performance_annalizer</string>
    <string name="title_activity_wall_mounted_fp">Wall_mounted_fp</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txt_fingerplace">Please press finger &#8230;</string>
    <string name="txt_fpbegin">Begin to Identify</string>
    <string name="txt_fpplace">Please press finger</string>
    <string name="txt_fpdisplay">Processing fingerprint image &#8230;</string>
    <string name="txt_fpprocess">Start processing &#8230;</string>
    <string name="txt_fpidentify">Being Identify &#8230;</string>
    <string name="txt_fpfail">Failed to generate!</string>
    <string name="txt_fpmatchok">Match OK!</string>
    <string name="txt_fpmatchfail">Match Fail!</string>
    <string name="usb_cable_connected_error">USB Interface has been occupied</string>
    <string name="finger_reg_error">Not all fingers from both hands have been registered</string>
    <string name="right_hand_registration">Right hand registration</string>
    <string name="left_hand_registration">Left hand Registration</string>
    <string name="image_is_too_small_error">Image is too small.</string>
    <string name="hand_registration">Hand registration</string>
    <string name="right_thumb_prompt">Place your right thumb finger on the fingerprint sensor</string>
    <string name="right_index_prompt">Place your right index finger on the fingerprint sensor</string>
    <string name="right_midle_prompt">Place your right middle finger on the fingerprint sensor</string>
    <string name="right_ring_prompt">Place your right ring finger on the fingerprint sensor</string>
    <string name="right_pinky_prompt">Place your right pinky finger on the fingerprint sensor</string>
    <string name="left_thumb_prompt">Place your left thumb on the fingerprint sensor</string>
    <string name="left_index_prompt">Place your left index finger on the fingerprint sensor</string>
    <string name="left_middle_prompt">Place your left middle finger on the fingerprint sensor</string>
    <string name="left_ring_prompt">Place your left ring finger on the fingerprint sensor</string>
    <string name="left_pinky_prompt">Place your left pinky finger on the fingerprint sensor</string>
    <string name="re_enroll_same_finger_message">Error in finger enrolment ,Please re-enroll the same finger</string>
    <string name="finger_captured_text">Finger Captured !</string>
    <string name="fingerprint_registration_complete">Finger registration Complete !</string>
    <string name="already_registered_finger_error">The finger you placed has already been registered</string>
    <string name="place_finger_prompt">Place the finger shown below on the sensor</string>
    <string name="title_activity_reg_pg1">Reg_pg1</string>
    <string name="current_device">Current device :</string>
    <string name="initializing">initializing ...</string>
    <string name="set_device">Set device :</string>
    <string name="set_printer">Set printer :</string>
    <string name="search_complete">Status : Search complete</string>
    <string name="paired_to">Paired to :</string>
    <string name="unpaired_to">Unpaired to :</string>
    <string name="bt_not_available">Bluetooth not available ...!!!</string>
    <string name="current_printer">Current Printer :</string>
    <string name="current_fp_device">Current FP device :</string>
    <string name="status_searching">Status : Searching ...</string>
    <string name="bt_settings">Bt Settings|</string>
    <string name="printer_selection">Printer Selection</string>
    <string name="device_selection">Bt Settings|FP device Selection</string>
    <string name="weighbridge_selection">Bt Settings|Weighbridge Selection</string>
    <string name="synchronizing_cexception_codes">Synchronizing exception codes</string>
    <string name="printer_not_connected">Printer not connected</string>
    <string name="str_printer_state">STATE</string>
    <string name="str_printer_printing">Printing</string>
    <string name="str_printer_lowpower">Low power</string>
    <string name="str_printer_nopaper">No paper</string>
    <string name="str_printer_bufferfull">Buffer full</string>
    <string name="str_printer_buffernull">Buffer null</string>
    <string name="str_printer_hightemperature">High temperature</string>
    <string name="str_devecehasblue">Bluetooth equipment! </string>
    <string name="str_nomatched">no matching equipment!</string>
    <string name="str_connected">connected </string>
    <string name="str_disconnected">not connected to </string>
    <string name="str_connecting">connecting to </string>
    <string name="str_hasnodevice">no Bluetooth devices! </string>
    <string name="str_scanover">scanning is finished!</string>
    <string name="chose">select</string>
    <string name="mode_bt">BT Printer</string>
    <string name="mode_wifi">Wifi Printer</string>
    <string name="mode_usb">USB Printer</string>
    <string name="str_printunicode">Print Unicode</string>
    <string name="str_exit">Sure exit and close the equipment?</string>
    <string name="str_autotime">Interval(ms):</string>
    <string name="str_autoprint">Auto Print</string>
    <string name="str_hintprint">Please enter a command print</string>
    <string name="not_connected">not_connected</string>
    <string name="connected_to">Connected to</string>
    <string name="connecting">Connecting</string>
    <string name="unable_to_connect_to_printer">Unable to connect to printer</string>
    <string name="acquired_name">Acquired name</string>
    <string name="auto_confirm">Auto confirm</string>
    <string name="activity_area">Activity area</string>
    <string name="activity">Activity</string>
    <string name="verify">Verify</string>
    <string name="verification_details">Verification details</string>
    <string name="check_out_reason">Check out reason</string>
    <string name="device_status">Device status</string>
    <string name="search">Search</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="alert">Alert</string>
    <string name="confirm_you_want_to_clear_data_for_all_fields_in_this_page">Confirm you want to clear data for all fields in this page</string>
    <string name="printer_type">Printer type</string>
    <string name="t12_bluetooth">T12 Bluetooth</string>
    <string name="sft_bluetooth">SFT Bluetooth</string>
    <string name="sft2_bluetooth">SFT2 Bluetooth</string>
    <string name="restore_defaults">Restore defaults</string>
</resources>