<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="1"
    android:layout_alignParentRight="true"
    android:layout_gravity="right"
    android:background="@null"

    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:padding="10dp"
        android:id="@+id/backup_lay"
        android:background="@drawable/file_diagnostics_back"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/backup_title"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="22dp"
            android:id="@+id/primary_status_val"
            android:layout_height="wrap_content" />



        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_primary_progress"
            android:background="@null"
            android:layout_marginLeft="50dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/primary_status_val"
            custom:arc_text_color="@color/white"
            custom:arc_angle="230"
            custom:arc_unfinished_color="@color/colorPrimaryDark"
            custom:arc_finished_color="@color/colorAccent"
            android:layout_marginBottom="-20dp"
            custom:arc_progress="0"
            custom:arc_bottom_text="@string/overal_backup_progress"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recrusive_backup"
android:layout_alignParentRight="true"
            android:checked="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/whitesmoke"
            android:text="@string/recursive"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/check_lay"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/primary_status_val"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/local_backup_check"
                android:enabled="false"
                android:textSize="12dp"
                android:checked="true"
                android:textColor="@color/whitesmoke"
                android:text="Local backup"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_backup_check"
                android:enabled="true"
                android:textSize="12dp"
                android:layout_marginTop="@dimen/vertical_field_spacing"
                android:checked="true"
                android:textColor="@color/whitesmoke"
                android:text="@string/email_backup"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:id="@+id/ftp_backup_check"
                android:textSize="12dp"

                android:checked="true"
                android:layout_marginTop="@dimen/vertical_field_spacing"
                android:textColor="@color/whitesmoke"
                android:text="@string/sftp_backup"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sd_backup_check"
                android:textSize="12dp"

                android:checked="true"
                android:layout_marginTop="@dimen/vertical_field_spacing"
                android:textColor="@color/whitesmoke"
                android:text="@string/sd_card_backup"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_below="@+id/check_lay"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/hor_separator1"
            android:layout_height="1dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/hor_separator1"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="3dp"
        android:orientation="vertical"
        android:id="@+id/progress_layout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/secondary_status_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_toLeftOf="@+id/secondary_percent_val"
                android:layout_gravity="right"
                android:text="    "
                android:textSize="12dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/secondary_percent_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:layout_gravity="right"
                android:text="0%"
                android:textSize="12dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:id="@+id/secondary_backup_progress"

            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progress="0"
            android:progressDrawable="@drawable/progress" />

    </LinearLayout>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/initialize_backup"
        android:id="@+id/init_backup"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/whitesmoke"
        android:textAllCaps="false"
        android:layout_gravity="center"

        android:background="@drawable/normalbutton"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/backup_log"
        android:scrollbars="vertical"
        android:layout_height="230dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

             android:id="@+id/sync_status_label"
            android:textStyle="bold"

            android:layout_marginTop="5dp"
            android:textColor="@color/whitesmoke"
            android:text="@string/last_backup_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/last_backup_time_val"

            android:checked="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/whitesmoke"
            android:text="00-00-0000"/>

    </LinearLayout>
</LinearLayout>






    </RelativeLayout>

</RelativeLayout>