<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:elevation="12dp"
        android:innerRadius="5dp"
        android:shape="ring"
        android:thicknessRatio="0.9"
        app:cardCornerRadius="10dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:background="@color/white"
           android:padding="10dp"  >
           <RelativeLayout
               android:id="@+id/source_lay"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               >



               <ImageView
                   android:id="@+id/imageView2"
                   android:layout_width="40dp"
                   android:layout_height="44dp"
                   android:layout_alignParentStart="true"
                   android:layout_alignParentLeft="true"
                   android:layout_marginRight="3dp"
                   android:scaleType="fitXY"
                   android:src="@drawable/ic_settings_primary_dark">

               </ImageView>
               <!--</androidx.cardview.widget.CardView>-->
               <TextView
                   android:id="@+id/device_status"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignBottom="@+id/imageView2"
                   android:layout_toEndOf="@+id/imageView2"
                   android:layout_toRightOf="@+id/imageView2"
                   android:text="Time : "
                   android:visibility="gone"
                   android:textSize="12dp"
                   android:textStyle="italic" />

               <TextView
                   android:id="@+id/device_status_val"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignBottom="@+id/device_status"

                   android:layout_toRightOf="@+id/device_status"
                   android:text=" "

                   android:textSize="12dp"
                   android:textStyle="italic" />

               <TextView
                   android:id="@+id/sub_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignBottom="@id/imageView2"
                   android:layout_marginTop="2dp"
                   android:layout_toRightOf="@+id/imageView2"
                   android:text="Configuration"
                   android:textSize="25dp"
                   android:textColor="@color/colorPrimaryDark"
                   android:textStyle="bold" />



               <!--</androidx.cardview.widget.CardView>-->



           </RelativeLayout>
           <TextView
               android:id="@+id/messo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/imageView2"
               android:layout_marginTop="5dp"
               android:layout_toRightOf="@+id/imageView1"
               android:text="@string/printer_type"
               android:textSize="18dp"
               android:textStyle="bold" />
           <RadioGroup
               android:layout_width="match_parent"
               android:id="@+id/camera_types"
               android:layout_height="wrap_content">

               <androidx.appcompat.widget.AppCompatRadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/icao_rdb"
                   android:text="@string/t12_bluetooth"></androidx.appcompat.widget.AppCompatRadioButton>
             <androidx.appcompat.widget.AppCompatRadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                 android:id="@+id/doc_scanner_rdb"
                   android:text="@string/sft_bluetooth"></androidx.appcompat.widget.AppCompatRadioButton>
               <androidx.appcompat.widget.AppCompatRadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/luxand_camera_rdb"
                   android:text="@string/sft2_bluetooth">  </androidx.appcompat.widget.AppCompatRadioButton>




           </RadioGroup>



           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_below="@+id/messo"
               android:id="@+id/navigation_lay"
               android:layout_marginTop="15dp"
               android:layout_height="wrap_content">
               <Button
                   android:layout_width="match_parent"
                   android:layout_height="60dp"
                   android:text="@string/restore_defaults"
                   android:id="@+id/restore_defaults"
                   android:textColor="@color/white"
                   android:background="@drawable/normalbutton"
                   android:layout_toLeftOf="@+id/sep1"
                   android:layout_margin="5dp"/>
               <View
                   android:layout_width="2dp"
                   android:id="@+id/sep1"
                   android:layout_centerHorizontal="true"
                   android:layout_height="2dp"
                   />
               <Button
                   android:layout_width="match_parent"
                   android:layout_height="60dp"
                   android:text="@string/dismiss"
                   android:id="@+id/dismiss"
                   android:textColor="@color/white"
                   android:background="@drawable/accent_button"
                   android:layout_toRightOf="@+id/sep1"
                   android:layout_margin="5dp"/>

           </RelativeLayout>
       </LinearLayout>

    </androidx.cardview.widget.CardView>










</RelativeLayout>